--- a/templates/address.html
+++ b/templates/address.html
@@ -2,6 +2,6 @@
 <h2>Outputs</h2>
 <ul>
 %% for output in self.outputs.iter() {
-  <li><a href=/output/{{ output }}>{{ output }}</a></li>
+  <li><a class=monospace href=/output/{{ output }}>{{ output }}</a></li>
 %% }
 </ul>
