adding mint_progress to rune.html
adding new field `mint progress` to rune.html to show the current supply of max supply ratio.

--- a/templates/rune.html
+++ b/templates/rune.html
@@ -52,6 +52,8 @@
 %% }
   <dt>supply</dt>
   <dd>{{ self.entry.pile(self.entry.supply()) }}</dd>
+  <dt>mint progress</dt>
+  <dd>{{ self.entry.pile(self.entry.supply()) }} of {{ self.entry.pile(self.entry.max_supply()) }}</dd>
   <dt>premine</dt>
   <dd>{{ self.entry.pile(self.entry.premine) }}</dd>
   <dt>premine percentage</dt>
