--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -64,7 +64,7 @@
 %% if let Some(output) = &self.output {
 %% if let Ok(address) = self.chain.address_from_script(&output.script_pubkey ) {
   <dt>address</dt>
-  <dd class=monospace>{{ address }}</dd>
+  <dd><a href=/address/{{address}}>{{ address }}</a></dd>
 %% }
   <dt>value</dt>
   <dd>{{ output.value }}</dd>
