--- a/templates/address.html
+++ b/templates/address.html
@@ -1,7 +1,13 @@
 <h1>Address {{ self.address }}</h1>
-<h2>Outputs</h2>
-<ul>
+<dl>
+  <dt>sat balance</dt>
+  <dd>{{ self.sat_balance }}</dd>
+  <dt>outputs</dt>
+  <dd>
+    <ul>
 %% for output in self.outputs.iter() {
-  <li><a class=monospace href=/output/{{ output }}>{{ output }}</a></li>
+      <li><a class=monospace href=/output/{{ output }}>{{ output }}</a></li>
 %% }
-</ul>
+    </ul>
+  </dd>
+</dl>
