--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -73,7 +73,7 @@
   <dt>sat</dt>
   <dd><a href=/sat/{{sat}}>{{sat}}</a></dd>
   <dt>sat name</dt>
-  <dd><a href=/sat/{{sat.name()}}</a></dd>
+  <dd><a href=/sat/{{ sat.name() }}>{{ sat.name() }}</a></dd>
 %% }
 %% if let Some(metaprotocol) = self.inscription.metaprotocol() {
   <dt>metaprotocol</dt>
