--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -72,6 +72,8 @@
 %% if let Some(sat) = self.sat {
   <dt>sat</dt>
   <dd><a href=/sat/{{sat}}>{{sat}}</a></dd>
+  <dt>sat name</dt>
+  <dd><a href=/sat/{{ sat.name() }}>{{ sat.name() }}</a></dd>
 %% }
 %% if let Some(metaprotocol) = self.inscription.metaprotocol() {
   <dt>metaprotocol</dt>
