--- a/templates/address.html
+++ b/templates/address.html
@@ -2,6 +2,14 @@
 <dl>
   <dt>sat balance</dt>
   <dd>{{ self.sat_balance }}</dd>
+%% if !self.inscriptions.is_empty() {
+  <dt>inscriptions</dt>
+  <dd class=thumbnails>
+%% for inscription in &self.inscriptions {
+    {{Iframe::thumbnail(*inscription)}}
+%% }
+  </dd>
+%% }
   <dt>runes balances</dt>
 %% for (rune, decimal, symbol) in self.runes_balances.iter() {
 %% if let Some(symbol) = symbol {
