--- a/templates/address.html
+++ b/templates/address.html
@@ -15,7 +15,7 @@
 %% if let Some(symbol) = symbol {
   <dd><a class=monospace href=/rune/{{ rune }}>{{ rune }}</a>: {{ decimal }}{{ symbol }}</dd>
 %% } else {
-  <dd>{{ rune }}: {{ decimal }}</dd>
+  <dd><a class=monospace href=/rune/{{ rune }}>{{ rune }}</a>: {{ decimal }}</dd>
 %% }
 %% }
   <dt>outputs</dt>
