Add inscription index to /status

--- a/templates/status.html
+++ b/templates/status.html
@@ -30,6 +30,8 @@
   <dd>{{ self.unrecoverably_reorged }}</dd>
   <dt>address index</dt>
   <dd>{{ self.address_index }}</dd>
+  <dt>inscription index</dt>
+  <dd>{{ self.inscription_index }}</dd>
   <dt>rune index</dt>
   <dd>{{ self.rune_index }}</dd>
   <dt>sat index</dt>
