Add `/satpoint/<SATPOINT>` endpoint (#3949)

--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -110,7 +110,7 @@
   <dt>reveal transaction</dt>
   <dd><a class=monospace href=/tx/{{ self.id.txid }}>{{ self.id.txid }}</a></dd>
   <dt>location</dt>
-  <dd class=monospace>{{ self.satpoint }}</dd>
+  <dd><a class=monospace href=/satpoint/{{ self.satpoint }}>{{ self.satpoint }}</a></dd>
   <dt>output</dt>
   <dd><a class=monospace href=/output/{{ self.satpoint.outpoint }}>{{ self.satpoint.outpoint }}</a></dd>
   <dt>offset</dt>
