--- a/templates/output.html
+++ b/templates/output.html
@@ -16,10 +16,10 @@
         <th>rune</th>
         <th>balance</th>
       </tr>
-%% for (rune, balance) in &self.runes {
+%% for (rune, info) in &self.runes {
       <tr>
         <td><a href=/rune/{{ rune }}>{{ rune }}</a></td>
-        <td>{{ balance }}</td>
+        <td>{{ info.pile }}</td>
       </tr>
 %% }
     </table>
