Show total child count on inscription page.

--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -27,7 +27,7 @@
   </dd>
 %% }
 %% if !self.children.is_empty() {
-  <dt>children</dt>
+  <dt>children ({{self.child_count}})</dt>
   <dd>
     <div class=thumbnails>
 %% for id in &self.children {
