--- a/templates/status.html
+++ b/templates/status.html
@@ -38,6 +38,8 @@
   <dd>{{ self.sat_index }}</dd>
   <dt>transaction index</dt>
   <dd>{{ self.transaction_index }}</dd>
+  <dt>json api</dt>
+  <dd>{{ self.json_api }}</dd>
 %% if !env!("GIT_BRANCH").is_empty() {
   <dt>git branch</dt>
   <dd>{{ env!("GIT_BRANCH") }}</dd>
