--- a/templates/sat.html
+++ b/templates/sat.html
@@ -33,6 +33,9 @@
 %% if let Some(satpoint) = self.satpoint {
   <dt>location</dt><dd class=monospace>{{ satpoint }}</dd>
 %% }
+%% if let Some(address) = &self.address {
+  <dt>address</dt><dd class=monospace>{{ address }}</dd>
+%% }
 </dl>
 <div class=center>
 %% if self.sat.n() > 0 {
