Link to address page

--- a/templates/sat.html
+++ b/templates/sat.html
@@ -34,7 +34,7 @@
   <dt>location</dt><dd class=monospace>{{ satpoint }}</dd>
 %% }
 %% if let Some(address) = &self.address {
-  <dt>address</dt><dd class=monospace>{{ address }}</dd>
+  <dt>address</dt><dd class=monospace><a href=/address/{{address}}>{{ address }}</a></dd>
 %% }
 </dl>
 <div class=center>
