--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -35,7 +35,7 @@
 %% }
     </div>
     <div class=center>
-      <a href=/children/{{self.id}}>all</a>
+      <a href=/children/{{self.id}}>all ({{ self.child_count }})</a>
     </div>
   </dd>
 %% }
