--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -66,7 +66,8 @@
   <dd>
     {{ Trusted(MetadataHtml(&burn_metadata)) }}
   </dd>
-%% } else if let Some(output) = &self.output {
+%% }
+%% if let Some(output) = &self.output {
 %%   if let Ok(address) = self.chain.address_from_script(&output.script_pubkey ) {
   <dt>address</dt>
   <dd class=monospace><a href=/address/{{address}}>{{ address }}</a></dd>
