--- a/templates/sat.html
+++ b/templates/sat.html
@@ -31,7 +31,7 @@
   </dd>
 %% }
 %% if let Some(satpoint) = self.satpoint {
-  <dt>location</dt><dd class=monospace>{{ satpoint }}</dd>
+  <dt>location</dt><dd><a class=monospace href=/satpoint/{{ satpoint }}>{{ satpoint }}</a></dd>
 %% }
 </dl>
 <div class=center>
