--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -31,7 +31,7 @@
       <dt>value</dt><dd>{{ output.value.to_sat() }}</dd>
       <dt>script pubkey</dt><dd class=monospace>{{ output.script_pubkey.to_asm_string() }}</dd>
 %% if let Ok(address) = self.chain.address_from_script(&output.script_pubkey) {
-      <dt>address</dt><dd class=monospace><a href=/address/{{address}}>{{ address }}</a></dd>
+      <dt>address</dt><dd><a class=monospace href=/address/{{address}}>{{ address }}</a></dd>
 %% }
     </dl>
   </li>
