Identify collapsable nodes with class=collapse

--- a/static/index.css
+++ b/static/index.css
@@ -139,6 +139,10 @@ ol, ul {
   text-align: center;
 }
 
+.collapse {
+  font-family: monospace, monospace;
+}
+
 .monospace {
   font-family: monospace, monospace;
 }
