--- a/templates/rune-balances.html
+++ b/templates/rune-balances.html
@@ -12,9 +12,9 @@
 %% for (outpoint, balance) in balances {
         <tr>
           <td>
-            <a class=monospace href=/output/{{ outpoint }}>{{ outpoint }}</a>
+            <a class=collapse href=/output/{{ outpoint }}>{{ outpoint }}</a>
           </td>
-          <td class=monospace>
+          <td class=collapse>
             {{ balance }}
           </td>
         </tr>
