--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -61,11 +61,17 @@
     {{ Trusted(MetadataHtml(&metadata)) }}
   </dd>
 %% }
+%% if let Some(burn_metadata) = self.burn_metadata() {
+  <dt>burn metadata</dt>
+  <dd>
+    {{ Trusted(MetadataHtml(&burn_metadata)) }}
+  </dd>
+%% }
 %% if let Some(output) = &self.output {
-%% if let Ok(address) = self.chain.address_from_script(&output.script_pubkey ) {
+%%   if let Ok(address) = self.chain.address_from_script(&output.script_pubkey ) {
   <dt>address</dt>
   <dd><a class=collapse href=/address/{{address}}>{{ address }}</a></dd>
-%% }
+%%   }
   <dt>value</dt>
   <dd>{{ output.value.to_sat() }}</dd>
 %% }
