--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -121,4 +121,14 @@
   <dd><a class=collapse href=/output/{{ self.satpoint.outpoint }}>{{ self.satpoint.outpoint }}</a></dd>
   <dt>offset</dt>
   <dd>{{ self.satpoint.offset }}</dd>
+  <dt>details</dt>
+  <dd>
+    <details>
+      <summary>...</summary>
+      <dl>
+        <dt>ethereum teleburn address</dt>
+        <dd class=collapse>0xa1DfBd1C519B9323FD7Fd8e498Ac16c2E502F059</dd>
+      </dl>
+    </details>
+  </dd>
 </dl>
