--- a/templates/rune-not-found.html
+++ b/templates/rune-not-found.html
@@ -1,12 +1,11 @@
 <h1>{{ self.rune }}</h1>
 <dl>
-%% if self.reserved {
+  <dt>unlock height</dt>
+%% if let Some(unlock_height) = self.unlock_height {
+  <dd>{{ unlock_height }}</dd>
+%% } else {
+  <dd>none</dd>
+%% }
   <dt>reserved</dt>
   <dd>{{ self.reserved }}</dd>
-%% } else {
-  <dt>unlock height</dt>
-  <dd>{{ self.unlock_height.unwrap() }}</dd>
-  <dt>etchable</dt>
-  <dd>{{ self.etchable }}</dd>
-%% }
 </dl>
