--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -127,7 +127,7 @@
       <summary>...</summary>
       <dl>
         <dt>ethereum teleburn address</dt>
-        <dd class=collapse>0xa1DfBd1C519B9323FD7Fd8e498Ac16c2E502F059</dd>
+        <dd class=collapse>{{ teleburn::Ethereum::from(self.id) }}</dd>
       </dl>
     </details>
   </dd>
