--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -86,9 +86,11 @@
   <dd>{{ metaprotocol }}</dd>
 %% }
 %% if self.inscription.content_length().is_some() || !self.inscription.delegates().is_empty() {
-%% if let Some(delegate) = self.inscription.delegates().first() {
-  <dt>delegate</dt>
+%% if !self.inscription.delegates().is_empty() {
+  <dt>delegates</dt>
+%% for delegate in self.inscription.delegates() {
   <dd><a href=/inscription/{{ delegate }}>{{ delegate }}</a></dd>
+%% }
 %% }
   <dt>preview</dt>
   <dd><a href=/preview/{{self.id}}>link</a></dd>
