Move video script into script

--- a/templates/preview-video.html
+++ b/templates/preview-video.html
@@ -3,12 +3,7 @@
   <head>
     <meta charset=utf-8>
     <link rel=stylesheet href=/static/preview-video.css>
-    <script type=module>
-      let video = document.getElementsByTagName('video')[0];
-      video.addEventListener('click', () => {
-        video.controls = true;
-      });
-    </script>
+    <script src=/static/preview-video.js type=module defer></script>
   </head>
   <body>
     <video loop muted autoplay>
