--- a/templates/address.html
+++ b/templates/address.html
@@ -2,20 +2,24 @@
 <dl>
   <dt>sat balance</dt>
   <dd>{{ self.sat_balance }}</dd>
-%% if !self.inscriptions.is_empty() {
+%% let inscriptions = self.inscriptions.clone().unwrap_or_default();
+%% if !inscriptions.is_empty() {
   <dt>inscriptions</dt>
   <dd class=thumbnails>
-%% for inscription in &self.inscriptions {
+%% for inscription in &inscriptions {
     {{Iframe::thumbnail(*inscription)}}
 %% }
   </dd>
 %% }
+%% let runes_balances = self.runes_balances.clone().unwrap_or_default();
+%% if !runes_balances.is_empty() {
   <dt>runes balances</dt>
-%% for (rune, decimal, symbol) in self.runes_balances.iter() {
+%% for (rune, decimal, symbol) in runes_balances.iter() {
 %% if let Some(symbol) = symbol {
   <dd><a class=monospace href=/rune/{{ rune }}>{{ rune }}</a>: {{ decimal }}{{ symbol }}</dd>
 %% } else {
   <dd><a class=monospace href=/rune/{{ rune }}>{{ rune }}</a>: {{ decimal }}¤</dd>
+%% }
 %% }
 %% }
   <dt>outputs</dt>
