--- a/templates/output.html
+++ b/templates/output.html
@@ -1,16 +1,14 @@
 <h1>Output <span class=monospace>{{self.outpoint}}</span></h1>
 <dl>
-%% let inscriptions = self.inscriptions.clone().unwrap_or_default();
-%% if !inscriptions.is_empty() {
+%% if let Some(inscriptions) = self.inscriptions.as_ref().filter(|inscriptions| !inscriptions.is_empty()) {
   <dt>inscriptions</dt>
   <dd class=thumbnails>
-%% for inscription in &inscriptions {
+%% for inscription in inscriptions {
     {{Iframe::thumbnail(*inscription)}}
 %% }
   </dd>
 %% }
-%% let runes = self.runes.clone().unwrap_or_default();
-%% if !runes.is_empty() {
+%% if let Some(runes) = self.runes.as_ref().filter(|runes| !runes.is_empty()) {
   <dt>runes</dt>
   <dd>
     <table>
@@ -18,7 +16,7 @@
         <th>rune</th>
         <th>balance</th>
       </tr>
-%% for (rune, balance) in &runes {
+%% for (rune, balance) in runes {
       <tr>
         <td><a href=/rune/{{ rune }}>{{ rune }}</a></td>
         <td>{{ balance }}</td>
