Return `None` for assets when asset index does not exist (#4141)

--- a/templates/output.html
+++ b/templates/output.html
@@ -1,14 +1,14 @@
 <h1>Output <span class=monospace>{{self.outpoint}}</span></h1>
 <dl>
-%% if !self.inscriptions.is_empty() {
+%% if let Some(inscriptions) = self.inscriptions.as_ref().filter(|inscriptions| !inscriptions.is_empty()) {
   <dt>inscriptions</dt>
   <dd class=thumbnails>
-%% for inscription in &self.inscriptions {
+%% for inscription in inscriptions {
     {{Iframe::thumbnail(*inscription)}}
 %% }
   </dd>
 %% }
-%% if !self.runes.is_empty() {
+%% if let Some(runes) = self.runes.as_ref().filter(|runes| !runes.is_empty()) {
   <dt>runes</dt>
   <dd>
     <table>
@@ -16,7 +16,7 @@
         <th>rune</th>
         <th>balance</th>
       </tr>
-%% for (rune, balance) in &self.runes {
+%% for (rune, balance) in runes {
       <tr>
         <td><a href=/rune/{{ rune }}>{{ rune }}</a></td>
         <td>{{ balance }}</td>
