Try recovering an address

--- a/templates/satscard.html
+++ b/templates/satscard.html
@@ -13,4 +13,6 @@
   <dd>{{ hex::encode(nonce) }}</dd>
   <dt>signature</dt>
   <dd>{{ signature }}</dd>
+  <dt>address</dt>
+  <dd>{{ self.query.address() }}</dd>
 </dl>
