--- a/templates/satscard.html
+++ b/templates/satscard.html
@@ -14,5 +14,5 @@
   <dt>signature</dt>
   <dd>{{ signature }}</dd>
   <dt>address</dt>
-  <dd>{{ self.query.address() }}</dd>
+  <dd>{{ self.query.address().unwrap() }}</dd>
 </dl>
