--- a/templates/satscard.html
+++ b/templates/satscard.html
@@ -1,6 +1,6 @@
 <h1>Satscard</h1>
 
-%% let crate::satscard::Query { state, slot, address_suffix, nonce, signature } = &self.query;
+%% let crate::satscard::Query { state, slot, address_suffix, nonce, signature, address } = &self.query;
 
 <dl>
   <dt>state</dt>
@@ -14,5 +14,5 @@
   <dt>signature</dt>
   <dd>{{ signature }}</dd>
   <dt>address</dt>
-  <dd>{{ self.query.address().unwrap() }}</dd>
+  <dd>{{ address }}</dd>
 </dl>
