Human readable slot numbers are one-indexed

--- a/templates/satscard.html
+++ b/templates/satscard.html
@@ -21,7 +21,7 @@
 %% if let Some(Satscard { address, nonce, slot, state, .. }) = &self.satscard {
 <dl>
   <dt>slot</dt>
-  <dd>{{ slot }}</dd>
+  <dd>{{ slot + 1 }}</dd>
   <dt>state</dt>
   <dd>{{ state }}</dd>
   <dt>address</dt>
