--- a/templates/rune.html
+++ b/templates/rune.html
@@ -70,6 +70,8 @@
 %% }
   <dt>turbo</dt>
   <dd>{{ self.entry.turbo }}</dd>
+  <dt>freezable</dt>
+  <dd>{{ self.entry.freezable }}</dd>
   <dt>etching</dt>
   <dd><a class=collapse href=/tx/{{ self.entry.etching }}>{{ self.entry.etching }}</a></dd>
 %% if let Some(parent) = self.parent {
