Write some tests

--- a/templates/satscard.html
+++ b/templates/satscard.html
@@ -18,7 +18,7 @@
 
 <hr>
 
-%% if let Some(Satscard { address, nonce, slot, state, .. }) = &self.satscard {
+%% if let Some((Satscard { address, nonce, slot, state, .. }, address_info)) = &self.satscard {
 <dl>
   <dt>slot</dt>
   <dd>{{ slot + 1 }}</dd>
@@ -29,10 +29,10 @@
   <dt>nonce</dt>
   <dd>{{ hex::encode(nonce) }}</dd>
 </dl>
+
+%% if let Some(address_info) = &address_info {
+<hr>
+{{ Trusted(address_info) }}
 %% }
 
-<hr>
-
-%% if let Some(address_info) = &self.address_info {
-{{ Trusted(address_info) }}
 %% }
