--- a/templates/satscard.html
+++ b/templates/satscard.html
@@ -1,5 +1,8 @@
+%% if let Some((Satscard { address, .. }, _address_info)) = &self.satscard {
+<h1>Satscard {{ address }}</h1>
+%% } else {
 <h1>Satscard</h1>
-
+%% }
 <form>
   <label for=url>Coinkite SATSCARD URL</label>
   <input
@@ -15,9 +18,7 @@
   >
   <input type="submit" value="Submit">
 </form>
-
 <hr>
-
 %% if let Some((Satscard { address, nonce, slot, state, .. }, address_info)) = &self.satscard {
 <dl>
   <dt>slot</dt>
@@ -29,10 +30,8 @@
   <dt>nonce</dt>
   <dd>{{ hex::encode(nonce) }}</dd>
 </dl>
-
 %% if let Some(address_info) = &address_info {
 <hr>
 {{ Trusted(address_info) }}
 %% }
-
 %% }
