Link address to /address

--- a/templates/satscard.html
+++ b/templates/satscard.html
@@ -25,7 +25,7 @@
   <dt>state</dt>
   <dd class=satscard-{{ state }}>{{ state }}</dd>
   <dt>address</dt>
-  <dd>{{ address }}</dd>
+  <dd><a class=collapse href=/address/{{address}}>{{ address }}</a></dd>
   <dt>nonce</dt>
   <dd>{{ hex::encode(nonce) }}</dd>
 </dl>
