--- a/templates/satscard.html
+++ b/templates/satscard.html
@@ -9,9 +9,9 @@
     type=text
     id=url
     name=url
-    pattern='^https://getsatscard.com/start#.*$'
+    pattern='^https://(get)?satscard.com/start#.*$'
     required
-    title='The URL should begin with "https://(get)?satscard.com/start#".'
+    title='The URL should begin with "https://(get)satscard.com/start#".'
 %% if let Some(value) = self.form_value() {
     value='{{ value }}'
 %% }
