--- a/templates/satscard.html
+++ b/templates/satscard.html
@@ -4,7 +4,7 @@
 <h1>Satscard</h1>
 %% }
 <form>
-  <label for=url>Coinkite SATSCARD URL</label>
+  <label for=url>SATSCARD URL</label>
   <input
     type=text
     id=url
