feat: implemented "in reserve" rune field

--- a/templates/rune.html
+++ b/templates/rune.html
@@ -54,8 +54,15 @@
 %% } else {
   <dd>no</dd>
 %% }
+%% if let Some(reserved) = self.reserved {
   <dt>supply</dt>
-  <dd>{{ self.entry.pile(self.entry.supply()) }}</dd>
+  <dd>{{ self.entry.pile(self.entry.supply() - reserved) }}</dd>
+  <dt>reserved</dt>
+  <dd>{{ self.entry.pile(reserved) }}</dd>
+%% } else {
+    <dt>supply</dt>
+    <dd>{{ self.entry.pile(self.entry.supply()) }}</dd>
+%% }
   <dt>premine</dt>
   <dd>{{ self.entry.pile(self.entry.premine) }}</dd>
   <dt>premine percentage</dt>
