Render borders around thumbnails

--- a/static/index.css
+++ b/static/index.css
@@ -212,9 +212,14 @@ a.mythic {
 
 .thumbnails > a {
   border-radius: 2%;
+  border: 1px solid #222;
   margin: 1%;
   overflow: hidden;
   width: 23%;
+}
+
+.thumbnails > a:hover {
+  border-color: #444;
 }
 
 .thumbnails iframe {
