--- a/templates/preview-iframe.html
+++ b/templates/preview-iframe.html
@@ -6,6 +6,13 @@
     <link rel=stylesheet href=/static/preview-iframe.css>
   </head>
   <body>
-    <iframe sandbox=allow-scripts loading=lazy src=/content/{{self.inscription_id}}></iframe>
+    <iframe
+      loading=lazy
+      sandbox=allow-scripts
+      src=/content/{{self.inscription_id}}
+%% if self.thumbnail {
+      scrolling=no
+%% }
+    ></iframe>
   </body>
 </html>
