Allow downloads on iframe previews

--- a/templates/preview-iframe.html
+++ b/templates/preview-iframe.html
@@ -8,7 +8,7 @@
   <body>
     <iframe
       loading=lazy
-      sandbox=allow-scripts
+      sandbox='allow-downloads allow-scripts'
       src=/content/{{self.inscription_id}}
 %% if self.thumbnail {
       scrolling=no
