Revert "Differentiate previews and thumbnails (#4295)"
This reverts commit aae87e3d5c6ec4313ce9bdf13a035836a279224c.

--- a/templates/preview-iframe.html
+++ b/templates/preview-iframe.html
@@ -6,13 +6,6 @@
     <link rel=stylesheet href=/static/preview-iframe.css>
   </head>
   <body>
-    <iframe
-      loading=lazy
-      sandbox=allow-scripts
-      src=/content/{{self.inscription_id}}
-%% if self.thumbnail {
-      scrolling=no
-%% }
-    ></iframe>
+    <iframe sandbox=allow-scripts loading=lazy src=/content/{{self.inscription_id}}></iframe>
   </body>
 </html>
