--- a/templates/sat.html
+++ b/templates/sat.html
@@ -22,6 +22,7 @@
 %% }
   </dd>
 %% }
+  <dt>luck</dt><dd>{{ self.sat.luck() }}</dd>
 %% if !self.inscriptions.is_empty() {
   <dt>inscriptions</dt>
   <dd class=thumbnails>
