--- a/templates/home.html
+++ b/templates/home.html
@@ -4,3 +4,15 @@
   {{ Iframe::thumbnail(*inscription) }}
 %% }
 </div>
+<div class=center>
+%% if let Some(prev) = self.prev {
+<a class=prev href=/latest/{{prev}}>prev</a>
+%% } else {
+prev
+%% }
+%% if let Some(next) = self.next {
+<a class=next href=/latest/{{next}}>next</a>
+%% } else {
+next
+%% }
+</div>
