Document sweeping satscards

--- a/templates/satscard.html
+++ b/templates/satscard.html
@@ -3,6 +3,9 @@
 %% } else {
 <h1>Satscard</h1>
 %% }
+<p>
+  <a href=https://docs.ordinals.com/guides/satscards.html>docs</a>
+</p>
 <form>
   <label for=url>Satscard URL</label>
   <input
