Fix trait template description list

--- a/templates/attributes.html
+++ b/templates/attributes.html
@@ -7,7 +7,7 @@
 <dd>
   <dl>
 %% for (name, value) in &self.0.traits.items {
-    <dd>{{name}}</dd><dt>{{value}}</dt>
+    <dt>{{name}}</dt><dd>{{value}}</dd>
 %% }
   </dl>
 </dd>
