--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -1,6 +1,6 @@
 <h1>Inscription {{ self.number }}</h1>
 %% if let Some(title) = self.properties.attributes.title.as_ref() {
-<p class=title>{{ title }}</p>
+<p class=subtitle>{{ title }}</p>
 %% }
 <div class=inscription>
 %% if let Some(previous) = self.previous {
