--- a/templates/item.html
+++ b/templates/item.html
@@ -1,6 +1,6 @@
 <h1>Gallery {{ self.gallery_inscription_number }} item {{ self.i }}</h1>
 %% if let Some(title) = self.item.attributes.title.as_ref() {
-<p class=title>{{ title }}</p>
+<p class=subtitle>{{ title }}</p>
 %% }
 <div class=inscription>
 {{ Iframe::main(self.item.id) }}
