--- a/templates/item.html
+++ b/templates/item.html
@@ -1,5 +1,5 @@
 <h1>Gallery {{ self.gallery_inscription_number }} item {{ self.i }}</h1>
-%% if let Some(title) = self.item.attributes.title.as_ref() {
+%% if let Some(title) = &self.item.attributes.title {
 <p class=subtitle>{{ title }}</p>
 %% }
 <div class=inscription>
