--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -1,5 +1,5 @@
 <h1>Inscription {{ self.number }}</h1>
-%% if let Some(title) = self.properties.attributes.title.as_ref() {
+%% if let Some(title) = &self.properties.attributes.title {
 <p class=subtitle>{{ title }}</p>
 %% }
 <div class=inscription>
