--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -1,4 +1,7 @@
 <h1>Inscription {{ self.number }}</h1>
+%% if let Some(title) = &self.properties.attributes.title {
+<p class=subtitle>{{ title }}</p>
+%% }
 <div class=inscription>
 %% if let Some(previous) = self.previous {
 <a class=prev href=/inscription/{{previous}}>❮</a>
