--- a/templates/item.html
+++ b/templates/item.html
@@ -3,10 +3,10 @@
 <p class=subtitle>{{ title }}</p>
 %% }
 <div class=inscription>
-{{ Iframe::main(self.item.id) }}
+{{ Iframe::main(self.item.id()) }}
 </div>
 <dl>
   <dt>inscription</dt>
-  <dd><a href=/inscription/{{ self.item.id }}>{{ self.item.id }}</a></dl>
+  <dd><a href=/inscription/{{ self.item.id() }}>{{ self.item.id() }}</a></dl>
   {{ Trusted(AttributesHtml(&self.item.attributes)) }}
 </dl>
