--- a/templates/page.html
+++ b/templates/page.html
@@ -22,6 +22,7 @@
       <a href=/inscriptions title=inscriptions><img class=icon src=/static/images.svg></a>
       <a href=/runes title=runes><img class=icon src=/static/rune.svg></a>
       <a href=/collections title=collections><img class=icon src=/static/diagram-project.svg></a>
+      <a href=/galleries title=galleries><img class=icon src=/static/box-archive.svg></a>
       <a href=/blocks title=blocks><img class=icon src=/static/cubes.svg></a>
       <a href=/clock title=clock><img class=icon src=/static/clock.svg></a>
 %% if self.config.index_sats {
