--- a/templates/item.html
+++ b/templates/item.html
@@ -1,4 +1,4 @@
-<h1>Gallery {{ self.gallery_number }} item {{ self.i }}</h1>
+<h1>Gallery {{ self.gallery_number }} Item {{ self.i }}</h1>
 %% if let Some(title) = &self.item.attributes.title {
 <p class=subtitle>{{ title }}</p>
 %% }
